--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
 {% load static %}
 <html lang="cs">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Drone Data Analyzer</title>
-  <!-- Bootstrap CSS -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="{% static 'style.css' %}">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Drone Data Analyzer</title>
+        <!-- Bootstrap CSS -->
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+        <!-- Map -->
+        <script src="https://cdn.jsdelivr.net/npm/ol@9.0.0/dist/ol.js"></script>
+        <link rel="stylesheet" type="text/css" href="{% static 'style.css' %}">
+        <script type="text/javascript" src="static/graph.js"></script>
+        <script type="text/javascript" src="static/map.js"></script>
 </head>
 <body>
 
@@ -32,7 +36,7 @@
                         <label for="status_data">Status data:</label>
                         <input type="file" name="status_data" id="status_data"><br>
                     </div>
-                    <button type="submit" onclick="showGraph(event)">Load data</button>
+                    <button type="submit" id="loadBtn" onclick="showGraph(event)">Load data</button>
                 </form>
             </div>
         </div>
@@ -54,6 +58,16 @@
         </div>
     </div>
 </div>
-<script type="text/javascript" src="static/graph.js"></script>
+
+{{longitude_latitude_data|json_script:"longitude_latitude_data"}}
+
 </body>
 </html>
+<script type="text/javascript">
+    const long_lat_data = JSON.parse(document.getElementById('longitude_latitude_data').textContent);
+    
+    function createMapOnClick(long_lat_data) {
+        createMap(long_lat_data);
+    }
+    document.getElementById('mapBtn').addEventListener('click', createMapOnClick);
+</script>
