--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -9,9 +9,12 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
         <!-- Map -->
         <script src="https://cdn.jsdelivr.net/npm/ol@9.0.0/dist/ol.js"></script>
+        <!-- Graph -->
+        <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
         <link rel="stylesheet" type="text/css" href="{% static 'style.css' %}">
-        <script type="text/javascript" src="static/graph.js"></script>
+        <script type="text/javascript" src="static/graphController.js"></script>
         <script type="text/javascript" src="static/map.js"></script>
+        <script type="text/javascript" src="static/accuracy.js"></script>
 </head>
 <body>
 
@@ -58,16 +61,5 @@
         </div>
     </div>
 </div>
-
-{{longitude_latitude_data|json_script:"longitude_latitude_data"}}
-
 </body>
 </html>
-<script type="text/javascript">
-    const long_lat_data = JSON.parse(document.getElementById('longitude_latitude_data').textContent);
-    
-    function createMapOnClick(long_lat_data) {
-        createMap(long_lat_data);
-    }
-    document.getElementById('mapBtn').addEventListener('click', createMapOnClick);
-</script>
