--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -15,6 +15,7 @@
         <script type="text/javascript" src="static/graphController.js"></script>
         <script type="text/javascript" src="static/map.js"></script>
         <script type="text/javascript" src="static/accuracy.js"></script>
+        <script type="text/javascript" src="static/signal.js"></script>
 </head>
 <body>
 
