Basic info tab, Drag to Zoom in graph

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -11,11 +11,15 @@
         <script src="https://cdn.jsdelivr.net/npm/ol@9.0.0/dist/ol.js"></script>
         <!-- Graph -->
         <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+        <script src="http://cdnjs.cloudflare.com/ajax/libs/hammer.js/2.0.8/hammer.min.js"></script>
+        <!-- Graph Zoom-->
+        <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-zoom"></script>
         <link rel="stylesheet" type="text/css" href="{% static 'style.css' %}">
         <script type="text/javascript" src="static/graphController.js"></script>
         <script type="text/javascript" src="static/map.js"></script>
         <script type="text/javascript" src="static/accuracy.js"></script>
         <script type="text/javascript" src="static/signal.js"></script>
+        <script type="text/javascript" src="static/basicInfo.js"></script>
 </head>
 <body>
 
