--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -51,8 +51,8 @@
         <div class="col-md-6" id="graphSection">
             <div class="text-center mb-3">
                 <div class="btn-group" role="group" aria-label="Data switch">
-                    <button type="button" id="basicBtn" class="btn btn-primary graphBtn" onclick="switchGraph('telemetry')">Basic Info</button>
-                    <button type="button" id="accuracyBtn" class="btn btn-primary graphBtn" onclick="switchGraph('status')">Accuracy Data</button>
+                    <button type="button" id="basicBtn" class="btn btn-primary graphBtn" onclick="switchGraph('basic')">Basic Info</button>
+                    <button type="button" id="accuracyBtn" class="btn btn-primary graphBtn" onclick="switchGraph('accuracy')">Accuracy Data</button>
                     <button type="button" id="signalBtn" class="btn btn-primary graphBtn" onclick="switchGraph('signal')">Signal Strength</button>
                     <button type="button" id="mapBtn" class="btn btn-primary graphBtn" onclick="switchGraph('map')">Map</button>
                 </div>
